# obsidian-connector

./: .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Install.command  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SBOM.md  SECURITY.md  TOOLS_CONTRACT.md  TROUBLESHOOTING.md  config.json  main.py  marketplace.json  mcpb.json  pyproject.toml  requirements-lock.txt  skills
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: harness-init.md
.github/: RELEASE_TEMPLATE.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  RELEASE_v0.10.0.md  RELEASE_v0.11.0.md  RELEASE_v0.2.0.md
.github/workflows/: build-macos-dmg.yml  build-windows-installer.yml  ci.yml  installer-smoke.yml  publish-pypi.yml  release.yml  security.yml  verify-release.yml
builds/claude-code/: .mcp.json  pyproject.toml
builds/claude-code/.claude-plugin/: plugin.json
builds/claude-code/hooks/: hooks.json  session_start.sh  session_stop.sh
builds/claude-code/obsidian_connector/: __init__.py  automation.py  client_fallback.py  config.py  graph.py  idea_router.py  reports.py  uninstall.py  vault_init.py  vault_presets.py  watcher.py  workflows.py
builds/claude-code/skills/float/: SKILL.md
builds/claude-code/skills/idea/: SKILL.md
builds/claude-code/skills/init-vault/: SKILL.md
builds/claude-code/skills/sync-vault/: SKILL.md
builds/claude-desktop/: claude_desktop_config_snippet.json
builds/portable/: README.md
config/defaults/: skill-portability.yaml
config/targets/: claude-code.yaml  claude-desktop.yaml  cowork.yaml  portable.yaml  pypi.yaml
creation/: README.md  sync_config.example.json
dev/hooks/: pre-commit
docs/: INSTALL-SURFACES.md  INSTALL.md  ONBOARDING.md  daily-optimization.md  index.md  second-brain-overview.md  setup-guide.md  tech-debt-tracker.md
docs/architecture/: claude-code-start-creation-work.md  creation-dashboard.md  creation-registry-canonical.md  creation-session-state.md  creation-vault-schema.md  mario-agentops-boundary.md  task_26_review_dashboards.md  task_29_provenance_ux.md  task_30_wiki_foundations.md  task_38_delegation_connector.md  task_40_review_coaching_connector.md  task_41_mobile_ux_connector.md  task_42_cross_device_sync_connector.md  voice-to-backlog-pipeline.md
docs/assets/: obsidian-connector-ascii.txt
docs/design-docs/: index.md  team-vault-pattern.md
docs/distribution/: DIRECTORY_CHECKLIST.md  MARKETPLACE_STRATEGY.md  MCPB_RESEARCH.md  SUBMISSION_CHECKLIST.md  index.md
docs/implementation/: commitment_commands.md  commitment_dashboards.md  commitment_note_schema.md  shared_vault.md
docs/import/: IMPORT.md
docs/plans/: 2026-03-05-cache-layer.md  2026-03-06-daily-optimization-guide-design.md  2026-03-06-second-brain-assistant-design.md  2026-03-06-second-brain-assistant-plan.md  2026-03-06-uninstaller-plan.md  ROADMAP.md  index.md  (+7 more)
hooks/: hooks.json  session_start.sh  session_stop.sh
obsidian_connector/: __init__.py  __main__.py  admin_ops.py  analytics_ops.py  approval_ops.py  audit.py  cli.py  client.py  client_fallback.py  coaching_ops.py  commitment_dashboards.py  commitment_notes.py  commitment_ops.py  config.py  creation_backlog.py  creation_dashboards.py  creation_events.py  creation_freshness.py  creation_migrate.py  creation_next.py  creation_paths.py  creation_projects.py  creation_repo_status.py  creation_schema.py  creation_session.py  creation_status.py  doctor.py  draft_manager.py  entity_notes.py  envelope.py  errors.py  file_backend.py  graph.py  import_tools.py  index_store.py  mcp_server.py  onboarding.py  platform.py  product_registry.py  project_intelligence.py  (+18 more)
portable/: README.md
scheduling/: README.md  com.obsidian-connector.daily.plist  config.yaml  run_scheduled.py
scripts/: Install.ps1  audit_permissions_test.py  audit_test.py  automation_test.py  build-portable.sh  build-windows-installer.ps1  cache_test.py  checkin_test.py  cli_parse_test.py  commitment_dashboards_test.py  commitment_notes_test.py  commitment_ops_test.py  create-dmg.sh  create-exe.iss  delegation_test.py  diagnostic_report.py  draft_manager_test.py  edge_case_test.py  entity_notes_test.py  escaping_test.py  file_backend_test.py  generate_compat_matrix.py  graduate_test.py  graph_test.py  import_cycle_test.py  import_tools_test.py  index_test.py  install-linux.sh  install.sh  installer_smoke_test.py  integration_test.py  integrity_check.py  manifest_check.py  mcp_launch_smoke.sh  mcp_tool_contract_test.py  new_modules_test.py  perf_test.py  platform_test.py  project_intelligence_test.py  project_sync_test.py  (+15 more)
skills/: evening.md  morning.md  weekly.md
templates/: AGENTS_template.md  claude-desktop-persona.md  design-doc.md  doc-frontmatter.md  doc-gardener-prompt.md  exec-plan.md  product-spec.md  release-checklist.md
tests/: conftest.py  test_admin_helpers.py  test_all_suites.py  test_analytics_helpers.py  test_approval_ux.py  test_build_system.py  test_bulk_actions_connector.py  test_classifiers_rule_based.py  test_cli_tui_optional.py  test_client_retry.py  test_coaching_ops.py  test_config_validation.py  test_creation_backlog.py  test_creation_backlog_cli.py  test_creation_cli.py  test_creation_dashboard_cli.py  test_creation_dashboards.py  test_creation_events.py  test_creation_freshness.py  test_creation_freshness_guard_skill.py  test_creation_migrate.py  test_creation_next.py  test_creation_paths.py  test_creation_projects.py  test_creation_repo_status.py  test_creation_schema.py  test_creation_session.py  test_creation_status.py  test_creation_vault_default.py  test_dedup_helpers.py  test_delegation_connector.py  test_devices_ops.py  test_doctor_extensions.py  test_entity_notes.py  test_entity_wiki_foundations.py  test_graphify_smoke.py  test_hardening.py  test_import_tools.py  test_onboarding.py  test_packaging.py  (+13 more)
tools/: build.ts  diff.ts  docs_lint.py  doctor.ts  lib.ts  package-lock.json  package.json  package.ts  tsconfig.json  validate.ts
vault-context-drafts/: Life Context.md  Voice Profile.md  Work Context.md
(+227 files in other folders)
