[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-connector"
version = "0.8.3"
description = "Turn Claude into your second brain. Morning briefings, idea capture, evening reflections, weekly reviews -- all driven by your Obsidian vault."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mario Urquia", email = "60152193+mariourquia@users.noreply.github.com" },
]
dependencies = ["mcp>=1.0.0,<2.0.0"]
keywords = ["obsidian", "cli", "notes", "productivity", "automation", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.optional-dependencies]
scheduling = ["pyyaml>=6.0,<7.0"]
live = ["watchdog>=4.0,<7.0"]
semantic = ["sentence-transformers>=3.0,<4.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
obsidian-connector = "obsidian_connector.cli:main"
obsx = "obsidian_connector.cli:main"

[project.urls]
Homepage = "https://github.com/mariourquia/obsidian-connector"
Repository = "https://github.com/mariourquia/obsidian-connector"
Issues = "https://github.com/mariourquia/obsidian-connector/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
