[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsx"
version = "0.11.1"
description = "Turn Claude into your second brain. Morning briefings, idea capture, evening reflections, weekly reviews -- all driven by your Obsidian vault."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mario Urquia", email = "60152193+mariourquia@users.noreply.github.com" },
]
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0",
]
keywords = ["obsidian", "cli", "notes", "productivity", "automation", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.optional-dependencies]
scheduling = ["pyyaml>=6.0,<7.0"]
tui = ["textual>=1.0.0"]
live = ["watchdog>=4.0,<5.0"]
semantic = ["sentence-transformers>=3.0,<4.0"]
graphify = ["networkx>=3.0,<4.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
obsidian-connector = "obsidian_connector.cli:main"
obsx = "obsidian_connector.cli:main"
obsidian-connector-mcp = "obsidian_connector.mcp_server:main"

[project.urls]
Homepage = "https://github.com/mariourquia/obsidian-connector"
Repository = "https://github.com/mariourquia/obsidian-connector"
Issues = "https://github.com/mariourquia/obsidian-connector/issues"

[tool.hatch.build]
# Keep dev/build artifacts out of the published distributions.
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/build",
  "**/dist",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.so",
]

[tool.hatch.build.targets.wheel]
packages = ["obsidian_connector"]

[tool.hatch.build.targets.sdist]
include = [
  "obsidian_connector",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
